<resources>
    <string name="app_name">岛</string>
    <string name="initial_comment_number">000+</string>
    <string name="posted_image">posted_image</string>
    <string name="coment_icon">comment_icon</string>
    <string name="indicator_text">上岛中…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_detail">image_detail</string>
    <string name="load_state_indicator">正在取回…</string>
    <string name="menu_item_refresh">刷新</string>
    <string name="menu_item_search">搜索</string>
    <string name="loading_image">loading_image</string>
    <string name="menu_add">add</string>
    <string name="thread_report_menu_item">举报</string>
    <string name="menu_share_title">分享</string>
    <string name="new_thread_content">new thread content</string>
    <string name="text_sample_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="text_sample_short">Lorem ipsum dolor sit amet</string>
    <string name="menu_item_send">send</string>
    <string name="draft_menu_image_pick">image_pick</string>
    <string name="emoji">颜文字</string>
    <string name="image_share">share</string>
    <string name="detail_menu_star">收藏</string>
    <string name="uid_placeholder">xxxxxxxx</string>
    <string name="time_placeholder">1时前</string>
    <string name="thread_id_placeholder">88888888</string>
    <string name="thread_content_placeholder">不知道吃啥，roll个晚饭(*ﾟ∇ﾟ)1，螺蛳粉/鸭血粉丝/肠粉/胡辣汤2，黄焖鸡/煲仔饭/猪脚饭/烧腊饭3，麻辣香锅/冒菜/炸酱面/烤肉拌饭4，炒饭/便当炒菜/拉面/热干面5，汉堡/炸鸡/意面/披萨6，水饺/馄饨/生煎包/火烧7，烧烤/麻辣烫/麻辣拌/冷面8，烤鸭/烧鹅/椒麻鸡/烤鱼9，熬粥点心/瓦罐汤/蛋包饭/海南鸡饭0，空一顿，减肥又省钱(`д´)</string>
    <string name="action_camera_only">拍照</string>
    <string name="action_gallery_only">相册</string>
    <string name="post_new_image">post new image</string>
    <string name="image_save">save</string>
    <string name="cancel_button">cancel_button</string>
    <string name="water_mark">水印</string>
    <string name="has_water_mark">有水印</string>
    <string name="no_water_mark">无水印</string>
    <string name="fab_add_new_thread">add_new_thread</string>
    <string name="setting">设置</string>
    <string name="to_thread">去串</string>
    <string name="loading_page_fail_info">页面加载失败，请刷新</string>
    <string name="loading_fail_retry">重试</string>
    <string name="expand_button">expand</string>
    <string name="delete_button">delete_button</string>
    <string name="cookie_in_use_key">cookie_in_use_key</string>
    <string name="cookie_from_QR_code_key">cookie_from_QR_code_key</string>
    <string name="cookie_from_web_view_key">cookie_from_web_view_key</string>
    <string name="enable_fab_key">enable_fab_key</string>
    <string name="fab_place_right_key">fab_place_right_key</string>
    <string name="fab_default_size_key">fab_default_size_key</string>
    <string name="fab_seek_bar_key">fab_seek_bar_key</string>
    <string name="fab_side_distance_key">fab_side_distance_key</string>
    <string name="fab_bottom_distance_key">fab_bottom_distance_key</string>
    <string name="fab_swipe_functions_key">fab_swipe_functions_key</string>
    <string name="block_rule_manage_key">block_rule_manage_key</string>
    <string name="not_a_single_cookie_available">真的一个也没有了</string>
    <string name="name">名称</string>
    <string name="label_rule">屏蔽规则</string>
    <string name="label_name">名称</string>
    <string name="use_regex">使用正则表达式</string>
    <string name="label_block_target">屏蔽目标</string>
    <string name="edit">edit</string>
    <string name="bar">bar</string>
    <string name="is_not_case_sensitive">忽略大小写</string>
    <string name="match_entire">完全匹配</string>
    <string name="block_thread">屏蔽此串</string>
    <string name="block_uid">屏蔽饼干</string>
    <string name="star_thread">收藏此串</string>
    <string name="reply">回复</string>
    <string name="copy">复制</string>
    <string name="report">举报</string>
    <string name="my_star_collection">我的收藏</string>
    <string name="last_page">跳至末页</string>
    <string name="open_in_browser">浏览器打开</string>
    <string name="copy_thread_id">复制串号</string>
    <string name="h_tag">防剧透</string>
    <string name="po_only">只看po</string>
    <!--    <string name="emoji_list">|∀ﾟ, (´ﾟДﾟ`), (;´Д`), (｀･ω･), (=ﾟωﾟ)=, | ω・´), |-` ), |д` ), |ー` ), |∀` ), (つд⊂), (ﾟДﾟ≡ﾟДﾟ), (＾o＾)ﾉ, (|||ﾟДﾟ), ( ﾟ∀ﾟ), ( ´∀`), (*´∀`), (*ﾟ∇ﾟ), (*ﾟーﾟ), (　ﾟ 3ﾟ), ( ´ー`), ( ・_ゝ・), ( ´_ゝ`), (*´д`), (・ー・), (・∀・), (ゝ∀･), (〃∀〃), (*ﾟ∀ﾟ*), ( ﾟ∀。), ( `д´), (`ε´ ), (`ヮ´ ), σ`∀´),  ﾟ∀ﾟ)σ, ﾟ ∀ﾟ)ノ, (╬ﾟдﾟ), (|||ﾟдﾟ), ( ﾟдﾟ), Σ( ﾟдﾟ), ( ;ﾟдﾟ), ( ;´д`), (　д ) ﾟ ﾟ, ( ☉д⊙), (((　ﾟдﾟ))), ( ` ・´), ( ´д`), ( -д-), (>д<), ･ﾟ( ﾉд`ﾟ), ( TдT), (￣∇￣), (￣3￣), (￣ｰ￣), (￣ . ￣), (￣皿￣), (￣艸￣), (￣︿￣), (￣︶￣), ヾ(´ωﾟ｀), (*´ω`*), (・ω・), ( ´・ω), (｀・ω), (´・ω・`), (`・ω・´), ( `_っ´), ( `ー´), ( ´_っ`), ( ´ρ`), ( ﾟωﾟ), (oﾟωﾟo), (　^ω^), (｡◕∀◕｡), /( ◕‿‿◕ )\, ヾ(´ε`ヾ), (ノﾟ∀ﾟ)ノ, (σﾟдﾟ)σ, (σﾟ∀ﾟ)σ, |дﾟ ), ┃電柱┃, ﾟ(つд`ﾟ), ﾟÅﾟ )　, ⊂彡☆))д`), ⊂彡☆))д´), ⊂彡☆))∀`), (´∀((☆ミつ-->
    <!--</string>-->
    <string-array name="fab_size">
        <item>正常</item>
        <item>迷你</item>
        <item>自动</item>
    </string-array>
    <string-array name="swipe_function">
        <item> 无</item>
        <item>刷新页面</item>
        <item>打开侧边栏</item>
        <item>回到顶部</item>
    </string-array>
</resources>