<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="饼干cookie">
        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/cookie_in_use_key"
            app:title="管理饼干" />


        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/cookie_from_QR_code_key"
            app:title="二维码导入" />
        <!--        <EditTextPreference-->
        <!--            app:defaultValue="null"-->
        <!--            app:key="cookie_from_edit_text_key"-->
        <!--            app:singleLine="true"-->
        <!--            app:title="手动输入"-->
        <!--            app:iconSpaceReserved="false"-->
        <!--            app:useSimpleSummaryProvider="true"/>-->
        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/cookie_from_web_view_key"
            app:title="登录用户系统" />
    </PreferenceCategory>
    <PreferenceCategory android:title="屏蔽管理"
        app:iconSpaceReserved="false">
<Preference
    app:key="@string/block_rule_manage_key"
    app:title="管理屏蔽项"
    app:iconSpaceReserved="false"
    />
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="悬浮按钮">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="@string/enable_fab_key"
            app:title="使用悬浮按钮" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="@string/fab_place_right_key"
            app:title="悬浮球放右边" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:isPreferenceVisible="true"
            app:key="@string/fab_default_size_key"
            app:title="设为默认大小" />

        <SeekBarPreference
            android:max="100"
            app:defaultValue="20"
            app:iconSpaceReserved="false"
            app:isPreferenceVisible="false"
            app:key="@string/fab_seek_bar_key"
            app:min="20"
            app:title="悬浮按钮大小"
            app:useSimpleSummaryProvider="true" />
        <SeekBarPreference
            android:max="200"
            app:defaultValue="0"
            app:iconSpaceReserved="false"
            app:isPreferenceVisible="true"
            app:key="@string/fab_side_distance_key"
            app:min="0"
            app:title="侧边距调整"
            app:useSimpleSummaryProvider="true" />
        <SeekBarPreference
            android:max="200"
            app:defaultValue="0"
            app:iconSpaceReserved="false"
            app:isPreferenceVisible="true"
            app:key="@string/fab_bottom_distance_key"
            app:min="0"
            app:title="底边距调整"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/fab_swipe_functions_key"
            app:title="滑动时的功能" />


    </PreferenceCategory>

</PreferenceScreen>