<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_search"
        android:title="@string/menu_item_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_fragment_menu_add"
        android:icon="@drawable/ic_round_add_24"
        android:title="@string/menu_add"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_menu_setting"
        android:icon="@drawable/ic_round_settings_24"
        android:title="@string/setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_refresh"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/menu_item_refresh"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/main_menu_star_collection"
        android:title="@string/my_star_collection" />
</menu>