<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/detail_fragment_menu_add"
        android:icon="@drawable/ic_round_add_24"
        android:title="@string/menu_add"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/detail_fragment_menu_share"
        android:icon="@drawable/ic_round_share_24"
        android:title="@string/menu_share_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/detail_fragment_menu_report"
        android:title="@string/thread_report_menu_item"
        app:showAsAction="never" />
    <item
        android:id="@+id/detail_fragment_menu_star"
        android:title="@string/detail_menu_star" />
</menu>