<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/draft_menu_image_pick"
        android:icon="@drawable/ic_round_image_24"
        android:title="@string/draft_menu_image_pick"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/draft_emoji_pick"
        android:icon="@drawable/round_sentiment_satisfied_alt_24"
        android:title="@string/emoji"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/draft_menu_send"
        android:icon="@drawable/ic_round_send_24"
        android:title="@string/menu_item_send"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/draft_menu_hide_tag"
        android:title="@string/h_tag"
        app:showAsAction="never" />
</menu>