<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_block_rule_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/new_block_rule_toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/md_input_edit_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_name"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_input"
                style="@style/md_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                tools:text="名称" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/md_input_edit_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_rule"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rule_input"
                style="@style/md_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                tools:text="规则规则规则规则规则规则规则规则规则规则规则规则规则规则" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/is_regex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/use_regex"
            app:useMaterialThemeColors="true"
            android:theme="@style/Theme.Island"
            tools:checked="true" />
        <CheckBox
            android:id="@+id/is_not_case_sensitive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/is_not_case_sensitive"
            android:theme="@style/Theme.Island"
            app:useMaterialThemeColors="true"
            />
        <CheckBox
            android:id="@+id/match_entire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/match_entire"
            android:theme="@style/Theme.Island"
            app:useMaterialThemeColors="true"
            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/md_input_edit_text_layout_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_block_target"
            android:padding="5dp"
            app:endIconTint="@color/colorSecondary"
            app:helperText="目标符合规则则此串被屏蔽">

            <AutoCompleteTextView
                android:id="@+id/block_target_text_view"
                style="@style/md_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                tools:ignore="LabelFor"
                tools:text="全部" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</LinearLayout>