<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/indicator_bar"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:adjustViewBounds="false"
            android:background="@color/first_col_font_color"
            android:contentDescription="@string/bar"
            android:scaleType="fitStart" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                tools:text="blockrulenamehere" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/enable_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:theme="@style/Theme.Island" />

            <ImageButton
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:contentDescription="@string/edit"
                app:srcCompat="@drawable/ic_edit" />

            <ImageButton
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:contentDescription="@string/delete_button"
                android:cropToPadding="false"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/ic_outline_delete_outline_24" />

        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>