<?xml version="1.0" encoding="utf-8"?>


<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_md_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/md_card_margin"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp"
    app:contentPadding="5dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/first_row_detail_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            tools:visibility="gone">

            <TextView
                android:id="@+id/uid_textview_placeholder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:background="@drawable/placeholder_shape"
                android:gravity="start"
                android:text="@string/uid_placeholder"
                android:textColor="@color/first_col_font_color" />

            <TextView
                android:id="@+id/thread_id_textview_placeholder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/placeholder_shape"
                android:gravity="center"
                android:text="@string/thread_id_placeholder"
                android:textColor="@color/first_col_font_color" />

            <TextView
                android:id="@+id/time_textview_placeholder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:background="@drawable/placeholder_shape"
                android:gravity="end"
                android:text="@string/time_placeholder"
                android:textColor="@color/first_col_font_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_row_detail_placeholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            tools:visibility="gone">

            <TextView
                android:id="@+id/content_textview_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/placeholder_shape"
                android:ellipsize="end"
                android:fontFamily="sans-serif-thin"
                android:maxLines="5"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/thread_content_placeholder"
                android:textColor="@color/first_col_font_color"
                android:textSize="@dimen/content_font_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/first_row_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/uid_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:gravity="start"
                android:textColor="@color/first_col_font_color"
                android:textSize="@dimen/first_col_font_size" />

            <TextView
                android:id="@+id/thread_id_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/first_col_font_color"
                android:textSize="@dimen/first_col_font_size" />

            <TextView
                android:id="@+id/time_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/first_col_font_color"
                android:textSize="@dimen/first_col_font_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_row_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:visibility="gone"
            tools:visibility="visible">

            <!--                <TextView-->
            <!--                    android:id="@+id/content_reference_textview"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:paddingTop="8dp"-->
            <!--                    android:paddingBottom="8dp"-->
            <!--                    android:textColor="@color/thread_reference"-->
            <!--                    android:textSize="@dimen/content_font_size"-->
            <!--                    android:visibility="gone" />-->

            <TextView
                android:id="@+id/content_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/content_font_color"
                android:textSize="@dimen/content_font_size" />

            <ImageView
                android:id="@+id/image_posted"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/image_thumb_size"
                android:adjustViewBounds="true"
                android:background="#FFFFFF"
                android:contentDescription="@string/posted_image"
                android:maxWidth="300dp"
                android:visibility="gone"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
