<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/md_card_margin"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp"
    app:contentPadding="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/uid_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/thread_id_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:id="@+id/time_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <TextView
                android:id="@+id/content_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="3dp"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/image_posted"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:background="#FFFFFF"
                android:contentDescription="@string/posted_image"
                android:visibility="gone"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center|end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/comment_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/image_shape"
                android:contentDescription="@string/coment_icon"
                android:paddingStart="1dp"
                android:paddingEnd="1dp"
                app:srcCompat="@drawable/ic_baseline_mode_comment_16" />

            <TextView
                android:id="@+id/comment_number"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|start"
                android:text="@string/initial_comment_number"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>